fix carousel's cards overflow

--- a/src/components/activities/activities.component.css
+++ b/src/components/activities/activities.component.css
@@ -1,10 +1,13 @@
 .carousel-container {
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
+  overflow-x: hidden;
 }
+
 
 @media (max-width: 1023px) {
   .carousel-container {
+    display: flex;
+    flex-wrap: nowrap;
+    scroll-snap-type: x mandatory;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
